# text-cat-service

./: Dockerfile  Makefile  README  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
src/python/: Utils.py  main.py
src/python/collection/: WebSitesCollection.py
src/python/config/: QdrantClient.py
src/python/controller/: MainController.py  ZeroShotController.py
src/python/enum/: Category.py  TransformerName.py
src/python/factory/: TransformerFactory.py
src/python/model/: Metadata.py
src/python/service/: MainService.py  QdrantService.py  VectorizationService.py  ZeroShotService.py
src/python/transformer/: Transformer.py  ValhallaTransformer.py
test/: test_category.py  test_check.py
