[tool.poetry]
name = "text-cat-service"
version = "0.1.0"
description = ""
authors = ["adam <adam.sidorovich@setoo.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
annotated-types = "^0.7.0"
anyio = "^4.6.0"
certifi = "^2024.8.30"
charset-normalizer = "^3.3.2"
click = "^8.1.7"
python = ">=3.12,<3.13"
fastapi = "^0.115.0"
fastembed = "0.3.6"
filelock = "^3.16.1"
uvicorn = "^0.30.6"
transformers = "^4.44.2"
torch = "^2.4.1"
pydantic = "^2.9.2"
requests = "^2.32.3"
numpy = "^2.1.1"
safetensors = "^0.4.5"
fsspec = "^2024.9.0"
h11 = "^0.14.0"
huggingface-hub = "^0.25.1"
idna = "^3.10"
Jinja2 = "^3.1.4"
MarkupSafe = "^2.1.5"
mpmath = "^1.3.0"
networkx = "^3.3"
packaging = "^24.1"
pydantic_core = "^2.23.4"
PyYAML = "^6.0.2"
qdrant-client = "^1.11.3"
regex = "^2024.9.11"
setuptools = "^75.1.0"
sniffio = "^1.3.1"
starlette = "^0.38.6"
sympy = "^1.13.3"
tokenizers = "^0.19.1"
tqdm = "^4.66.5"
typing_extensions = "^4.12.2"
urllib3 = "^2.2.3"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
